--- a/robots_style.css
+++ b/robots_style.css
@@ -17,3 +17,23 @@
     border-radius: 10px;
     box-shadow: 10px 10px 5px #ccc;
 }
+
+.spycar
+{
+    position: absolute;
+    right: 2%;
+    top: 20%;
+    max-width: 35%;
+    border-radius: 10px;
+    box-shadow: 10px 10px 5px #ccc;
+}
+
+.spycar3
+{
+    position: absolute;
+    right: 10%;
+    bottom: 5%;
+    max-width: 17%;
+    border-radius: 10px;
+    box-shadow: 10px 10px 5px #ccc;
+}
