--- a/UI_UX.css
+++ b/UI_UX.css
@@ -5,15 +5,21 @@
     top: 15%;
     max-width: 13%;
     border-radius: 10px;
-    box-shadow: 10px 10px 5px #ccc;
+    box-shadow: 8px 8px 5px #ccc;
+    padding: 2px;
+    border: 1px solid #021a40;
+    background-color:lightgray; 
 }
 
 .ux-glow2
 {
     position: absolute;
     right: 10%;
-    bottom: 10%;
+    bottom: 8%;
     max-width: 25%;
     border-radius: 10px;
-    box-shadow: 10px 10px 5px #ccc;
+    box-shadow: 8px 8px 5px #ccc;
+    padding: 2px;
+    border: 1px solid #021a40;
+    background-color:lightgray; 
 }
