--- a/style.css
+++ b/style.css
@@ -348,6 +348,23 @@ ul li:hover ul.dropdown
         box-shadow: 10px 10px 5px #ccc;
         display: none;
     }
+    
+    .video-container
+    {
+        position: relative;
+        padding-bottom: 56.25%;
+        height: 0;
+        width: 100%;
+    }
+
+    .video-container iframe
+    {
+        position: absolute;
+        top: 0;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+    }
 
 @media only screen and (max-width: 750px) {
     .banner, .content, .logo, .sci {
