--- a/ryan.css
+++ b/ryan.css
@@ -138,9 +138,19 @@ header .navigation1 li a:hover
 {
     width:  200px;
     height: 200px;
-    border-radius: 10%;
+    border-radius: 30%;
     padding: 20px;
 }
+
+.offer_explanation
+{
+    position: absolute;
+    bottom: -60%;
+    font-size: 1em;
+    color: #fff;
+    max-width: 600px;
+}
+
 
 .top
 {
@@ -308,7 +318,7 @@ header .navigation1 li a:hover
 
 
 
-@media (max-width: 991px)
+@media (max-width: 500px)
 {
     .bg::before
     {  
@@ -324,7 +334,15 @@ header .navigation1 li a:hover
 {
     position: absolute;
     top: -10%;
-    font-size: 3em;
+    font-size: 2em;
+    color: #fff;
+    max-width: 600px;
+}
+
+.offer_explanation {
+    position: absolute;
+    bottom: -17%;
+    font-size: 1em;
     color: #fff;
     max-width: 600px;
 }
@@ -336,7 +354,7 @@ header .navigation1 li a:hover
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('ryan_bg.jpg');
+    background-image: none;
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: contain;
@@ -368,6 +386,18 @@ header .navigation1 li a:hover
     {
         font-size: 2.5em;
         margin-bottom: 15px;
+        color: rgb(102, 101, 101);
+    }
+
+    .content .textBox p
+    {
+        color: rgb(102, 101, 101);
+    }
+
+    .content .textBox a
+    {
+        color: white;
+        background-color: #01172b;
     }
 
     .content .imgBox
